--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [build]
-nixpkgs = ["libGL", "libGLU", "pkg-config", "python311", "gcc"]
+nixpkgs = ["libGL", "libGLU", "pkg-config", "python311", "gcc", "glib"]
 
 [variables]
 OPENCV_IO_ENABLE_OPENEXR = "0"
