--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixpkgs = ["python311", "gcc"]
 
 [phases.setup]
-aptPkgs = ["libgl1"]
+nixPkgs = ["libgl", "glib", "libsm", "libxext", "libxrender", "pkg-config"]
 
 [start]
 cmd = "gunicorn app:app --bind 0.0.0.0:$PORT"
