--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-flask
-ultralytics
+numpy==1.24.3
 opencv-python-headless==4.8.1.78
-numpy
-gunicorn
-gdown
+ultralytics==8.0.196
+torch==2.0.1
+torchvision==0.15.2
+flask==2.3.3
+gunicorn==21.2.0
+pillow==10.0.0
