--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-numpy==1.24.3
+Flask==2.3.3
+ultralytics==8.1.20
 opencv-python-headless==4.8.1.78
-ultralytics==8.0.196
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
-flask==2.3.3
+numpy==1.24.3
+Pillow==10.0.1
+torch==2.0.1
+torchvision==0.15.2
 gunicorn==21.2.0
-pillow==10.0.0
-pyyaml>=5.3.1
-requests>=2.23.0
-matplotlib>=3.2.2
-scipy>=1.4.1
+Werkzeug==2.3.7
