--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-Flask==2.3.3
-ultralytics==8.1.20
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
-Pillow==10.0.1
-torch==2.0.1
-torchvision==0.15.2
-gunicorn==21.2.0
-Werkzeug==2.3.7
+Flask
+ultralytics
+opencv-python-headless
+numpy
+Pillow
+gunicorn
